# safai-vla

./: .gitignore  LICENSE  Makefile  README.md  app_spec.txt  claude.md  pyproject.toml
.github/workflows/: ci.yml
assets/: architecture.mermaid
data/: collect.py  export_lerobot.py  push_to_hub.py  validate.py
docs/: ARCHITECTURE.md  CONTRIBUTING.md  EMBODIMENT.md  GETTING_STARTED.md  ROADMAP.md  SEWER_PARAMS.md
envs/isaac/: README.md  sewer_env_cfg.py
envs/mujoco/: __init__.py  params.py  safai_env.py  sewer_env.py  test_env.py
envs/mujoco/assets/: sewer_robot.xml
evaluation/: metrics.py  sewerbench.py  visualize.py
policies/: __init__.py  base.py  deposit.py  extract.py  navigate.py  position.py
training/: config.py  finetune.py
