[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "safai-vla"
version = "0.1.0"
description = "Open-source VLA model for autonomous sewer maintenance robotics in India"
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.11"
authors = [
    {name = "Saral Systems", email = "sayon@saralsystems.co"},
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    "mujoco>=3.0",
    "gymnasium>=0.29",
    "numpy>=1.24",
    "scipy>=1.11",
    "h5py>=3.9",
    "imageio>=2.31",
    "tqdm>=4.65",
    "typer>=0.9",
]

[project.optional-dependencies]
train = [
    "torch>=2.1",
    "transformers>=4.40",
    "peft>=0.10",
    "accelerate>=0.28",
    "datasets>=2.18",
    "lerobot>=0.1",
    "wandb>=0.16",
]
deploy = [
    "onnx>=1.15",
    "onnxruntime>=1.17",
]
dev = [
    "ruff>=0.3",
    "pytest>=8.0",
    "pre-commit>=3.6",
]
all = ["safai-vla[train,deploy,dev]"]

[project.urls]
Homepage = "https://github.com/saralsystems/safai-vla"
Documentation = "https://github.com/saralsystems/safai-vla/tree/main/docs"
Repository = "https://github.com/saralsystems/safai-vla"
Issues = "https://github.com/saralsystems/safai-vla/issues"

[tool.setuptools.packages.find]
include = ["envs*", "policies*", "data*", "training*", "evaluation*", "deployment*"]

[tool.ruff]
line-length = 99
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "W", "UP"]

[tool.pytest.ini_options]
testpaths = ["envs/mujoco", "evaluation"]
